# gl-renderer

./: .gitignore  CMakeLists.txt
include/: application.h  attribute.h  uniform.h  window.h
include/gfx/: application.h  draw.h  index_buffer.h  shader.h  texture.h  uniform.h
src/: application.cpp  draw.cpp  index_buffer.cpp  main.cpp  main_linux.cpp  main_windows.cpp  shader.cpp  texture.cpp  window.cpp
src/sample1/: sample1.cpp  sample1.h
